syntax = "proto3";
package pb;

import "google/protobuf/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Account {
    uint32 id = 1 [(gogoproto.customname) = "ID"];
    string name = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 5 [(gogoproto.stdtime) = true];
    google.protobuf.Timestamp updated_at = 6 [(gogoproto.stdtime) = true];
}

message Empty {

}